<resources>

    <!--             Main Activity     (View)    -->
    <string name="app_name">Poketest</string>
    <string name="stat_title">Choose best pokemon</string>
    <string name="hp_text">Health</string>
    <string name="att_text">Attack</string>
    <string name="def_text">Defence</string>
    <string name="button_refresh">Refresh</string>
    <string name="loading">Loading</string>

    <!--             Poke Stat Activity           -->
    <string name="statTitle">Stats of pokes</string>
    <string name="addName">Name</string>
    <string name="addType">Type</string>
    <string name="addAttack">Attack</string>
    <string name="addDeffence">Deffence</string>
    <string name="addHP">Health</string>
    <string name="addWeight">Weight</string>
    <string name="addHeight">Height</string>
    <string name="test">AaBbCcDd123</string>

    <!--             Poke Collector               -->
    <string name="BASE_URL">https://pokeapi.co/api/v2/</string>

    <!--             About Activity               -->
    <string name="aboutTitle">About</string>
    <string name="devBy">Developed by <i>Geraskin Roman</i></string>
    <string name="desBy">Designed by <i>Arkhangelskaya Elizaveta</i></string>
    <string name="gitLink">github.com/RomanVoran/Poketest</string>
    <string name="figmaLink"><u>Figma UI shema</u></string>
    <string name="figmaUrl">"https://www.figma.com/file/MQFNjUk1ioYYszVtypLtXR/poketest?node-id=0%3A1"</string>
    <string name="romanMail">geraskin.ra@gmail.com</string>
    <string name="lizaVK">vk.com/l.arkhangelsk</string>



</resources>
