<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PokeStatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent1"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/statTitle" />

    <ImageView
        android:id="@+id/imageView_poke"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <TextView
        android:id="@+id/textView_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poke" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="7sp"
        android:background="@color/divLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_name" />

    <TextView
        android:id="@+id/textView_type"
        style="@style/statTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        app:layout_constraintBottom_toTopOf="@+id/textView_hp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <TextView
        android:id="@+id/textView_hp"
        style="@style/statTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        app:layout_constraintBottom_toTopOf="@+id/textView_attack"
        app:layout_constraintStart_toStartOf="@+id/textView_type"
        app:layout_constraintTop_toBottomOf="@+id/textView_type" />

    <TextView
        android:id="@+id/textView_defence"
        style="@style/statTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        app:layout_constraintBottom_toTopOf="@+id/textView_weight"
        app:layout_constraintStart_toStartOf="@+id/textView_attack"
        app:layout_constraintTop_toBottomOf="@+id/textView_attack" />

    <TextView
        android:id="@+id/textView_weight"
        style="@style/statTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        app:layout_constraintBottom_toTopOf="@+id/textView_height"
        app:layout_constraintStart_toStartOf="@+id/textView_defence"
        app:layout_constraintTop_toBottomOf="@+id/textView_defence" />

    <TextView
        android:id="@+id/textView_height"
        style="@style/statTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_weight"
        app:layout_constraintTop_toBottomOf="@+id/textView_weight" />

    <TextView
        android:id="@+id/textView_attack"
        style="@style/statTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        app:layout_constraintBottom_toTopOf="@+id/textView_defence"
        app:layout_constraintStart_toStartOf="@+id/textView_hp"
        app:layout_constraintTop_toBottomOf="@+id/textView_hp" />

    <TextView
        android:id="@+id/textView3"
        style="@style/statTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addType"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView_type"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <TextView
        android:id="@+id/textView4"
        style="@style/statTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addHP"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        style="@style/statTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addAttack"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        style="@style/statTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addDeffence"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        style="@style/statTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addWeight"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <TextView
        android:id="@+id/textView8"
        style="@style/statTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addHeight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imageView2"
        style="@style/pokeStatIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/pokebal_32"
        app:layout_constraintBottom_toBottomOf="@+id/textView_type"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_type" />

    <ImageView
        android:id="@+id/imageView3"
        style="@style/pokeStatIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/heart_32"
        app:layout_constraintBottom_toBottomOf="@+id/textView_hp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/textView_hp" />

    <ImageView
        android:id="@+id/imageView4"
        style="@style/pokeStatIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sword_32"
        app:layout_constraintBottom_toBottomOf="@+id/textView_attack"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/textView_attack" />

    <ImageView
        android:id="@+id/imageView5"
        style="@style/pokeStatIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shield_32"
        app:layout_constraintBottom_toBottomOf="@+id/textView_defence"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/textView_defence" />

    <ImageView
        android:id="@+id/imageView6"
        style="@style/pokeStatIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/weight_32"
        app:layout_constraintBottom_toBottomOf="@+id/textView_weight"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/textView_weight" />

    <ImageView
        style="@style/pokeStatIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/height_32"
        app:layout_constraintBottom_toBottomOf="@+id/textView_height"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/textView_height" />


</androidx.constraintlayout.widget.ConstraintLayout>